# soccerbot

./: .gitignore  docker-compose.yaml  test_integration.py
soccer_fieldline_detection/src/: ball_detector.cpp
soccer_object_detection/src/outputs/: model27  model39  model9
soccer_pycontrol/src/soccer_pycontrol/: action_controller.py  ball.py  hello  path.py  path_section.py  soccerbot.py  soccerbot_controller_ros.py  soccerbot_rl.py  soccerbot_ros.py  soccerbot_ros_rl.py  test.py
soccer_pycontrol/src/soccer_rlcontrol/: kickview.py
soccer_rlcontrol/: CMakeLists.txt  package.xml  requirements.txt  setup.py
soccer_rlcontrol/bez_isaacgym/: main.py  play.py  train.py
soccer_rlcontrol/bez_isaacgym/tasks/: __init__.py  goalie_env.py  kick_ros_env.py
soccer_rlcontrol/bez_isaacgym/tasks/base/: __init__.py  ros_task.py  vec_task.py
soccer_rlcontrol/bez_isaacgym/test/: test_kick_env.py  test_kick_ros_env.py
soccer_rlcontrol/bez_isaacgym/utils/: reformat.py  rlgames_utils.py  torch_jit_utils.py  utils.py
soccer_rlcontrol/launch/: rlcontrol.launch
soccer_strategy/src/: config.py  game_engine.py  game_engine_competition.py  team_data.py
soccer_strategy/src/formation/: formation_strategy.py  normal_formation_strategy.py
soccer_strategy/src/strategy/: dummy_strategy2.py  formation_strategy.py
soccer_webots/src/soccer_webots/: game_controller_bridge.py  webots_robot_controller.py
soccerbot/launch/: soccerbot.launch  soccerbot_multi.launch
soccerbot/launch/modules/: localization.launch  navigation.launch  (+2 more)
soccerbot/scripts/: start_competition.sh
(+3 files in other folders)
