<?xml version="1.0"?>
<package format="2">
    <name>soccer_rlcontrol</name>
    <version>0.0.0</version>
    <description>Package for walking the robot</description>
    <maintainer email="jonathan.spraggett@mail.utoronto.ca">Jonathan</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>rospy</depend>
<depend>sensor_msgs</depend>

</package>